# DA2_T02G06

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  run.sh
algorithms/: Greedy.cpp  backtrackingBruteForce.cpp  bruteForce.cpp  dynamicProgramming.cpp  ilp.cpp
datasets/: Pallets_04.csv  Pallets_07.csv  TruckAndPallets_01.csv  TruckAndPallets_04.csv  TruckAndPallets_05.csv  TruckAndPallets_06.csv
html/: AVX512_2Complex_8h_source.html  AVX512_2PacketMath_8h_source.html  AVX512_2TypeCasting_8h_source.html  AVX_2Complex_8h_source.html  AVX_2PacketMath_8h_source.html  AVX_2TypeCasting_8h_source.html  AltiVec_2Complex_8h_source.html  AltiVec_2PacketMath_8h_source.html  ArithmeticSequence_8h_source.html  ArrayBase_8h_source.html  ArrayWrapper_8h_source.html  Array_8h_source.html  AssignEvaluator_8h_source.html  Assign_8h_source.html  Assign__MKL_8h_source.html  BFloat16_8h_source.html  BandMatrix_8h_source.html  Block_8h_source.html  BooleanRedux_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CUDA_2Complex_8h_source.html  CbcBranchActual_8hpp_source.html  CbcBranchAllDifferent_8hpp_source.html  CbcBranchBase_8hpp_source.html  CbcBranchCut_8hpp_source.html  CbcBranchDecision_8hpp_source.html  CbcBranchDefaultDecision_8hpp_source.html  CbcBranchDynamic_8hpp_source.html  CbcBranchLotsize_8hpp_source.html  CbcBranchToFixLots_8hpp_source.html  CbcBranchingObject_8hpp_source.html  CbcClique_8hpp_source.html  CbcCompareActual_8hpp_source.html  CbcCompareBase_8hpp_source.html  CbcCompareDefault_8hpp_source.html  CbcCompareDepth_8hpp_source.html  (+749 more)
(+338 files in other folders)
